layout/layout_maxwidth_480.css
/* Portrait phones and smaller */ 
@media (max-width: 480px) { 
    * {
        scroll-behavior: smooth;
        box-sizing: border-box;
    }

    html, body {
        overflow-x: hidden;
    }

    /* Prevent specific sections from creating horizontal overflow
       when their absolute-positioned children are rendered. */
    #landing, #main, #introduce, #project, #journey, #timeline, #gallery, #copyright {
        overflow-x: hidden;
        max-width: 100%;
    }

    /* Ensure timeline text never forces extra width on small screens. */
    .tl-text .intro,
    .tl-text .intro p,
    .tl-text .intro h1 {
        overflow-wrap: anywhere;
        word-break: break-word;
    }

    #main {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        height: 85vh;
    }

    #main .circle {
        height: 650px;
        clip-path: circle(55vw at right bottom);
    }

    #main .text {
        display: flex;
        flex-direction: column;
    }
    

    #main .text span  {
        font-size: 15px;
        font-weight: bold;
        color: crimson;
    }
    
    #main .big-img {
        margin: 0;
        max-width: 45vw;
        max-height: 45vh;
        border-radius: 20%;
        border-bottom: solid 5px white;
        top: 30px;
    }
    
    #main .btn {
        position: absolute;
        background-color: crimson;
        border-radius: 40px;
        padding: 8px 8px;
        font-weight: bold;
        letter-spacing: 0.6px;
        font-size: small;
        text-decoration: none;
        color: white;
        transition: 0.25s;
    }
    
    #main .btn:hover {
        background-color: white;
        color: crimson;
        border: solid 1px crimson;
    }

    .menu-btn {
        right: 3.5rem;
    }

    #mySidenav {
        width: 100%;
    }

    .thumb-img {
        display: none;
    }

    .about {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    .offer {
        /* padding: 0;
        padding-left: 25px;
        display: grid;
        grid-template-columns: auto auto auto;
        grid-template-rows: auto auto auto;
        grid-gap: 20px; */

        /* max-width: 100vw;
        min-height: 63vh; */
        /* width: 300px; */
/* 
        height: auto; */
    }

    .about .avatar {
        max-width: 60vw;
        max-height: 60vh;
        margin: 1.2rem 0;
    }
    
    .about .about-text {
        position: relative;
        align-self: center;
        max-width: 80vw;
        max-height: 20vh;
        padding: 0 5px;
        font-size: 0.9rem;
        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
        border-top: solid 2px crimson;
        border-radius: 10px;
        box-shadow: 2px rgba(0, 0, 0, .5); 
        display: flex;
        flex-direction: column;
        justify-content: space-between;
    }
    
    
    .about-text .about-btn {
        position: absolute;
        background-color: crimson;
        border-radius: 40px;
        padding: 12px 12px;
        font-weight: bold;
        letter-spacing: 0.6px;
        font-size: small;
        text-decoration: none;
        color: white;
        transition: 0.25s;
        margin: 0;
    }
    
    .about-text .about-btn:hover {
        background-color: white;
        color: crimson;
        border: solid 1px crimson;
    }

    #project {
        /* position: relative;
        top: 350px; */
        margin-top: 180px;
        height: auto;
    }

    #project .offer {
        width: 100%;
        padding: 0;
    }

    #journey {
        /* position: relative;
        top: 350px; */
        margin-top: 50px;
    }

    .line > ul li {
        width: 4rem;
        height: 4rem;
        font-size: 15px;
    }

    .icon > ul li {
        text-decoration: none;
        list-style-type: none;
    }

    .icon > ul li:nth-child(n) {
        width: 2.8rem;
	    height: 2.8rem;
    }

    .intro-1 h1, .intro-2 h1, .intro-3 h1, .intro-4 h1, .intro-5 h1{
        border-bottom: solid 1px black ;
        font-weight: bolder;
        font-size: 14px;
        font-family: 'Courier New', Courier, monospace;
    }
    
    .intro-1 p, .intro-2 p, .intro-3 p, .intro-4 p, .intro-5 p{
        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
        font-size: 12px;
    }

    .icon > ul li:nth-child(n) {
        background: none;
    }   

    #gallery{
        /* position: relative; */
        /* top: 350px; */
        margin-top: 50px;
    }


    #copyright{
        margin-top: 7rem;
    }
    
    #copyright .copyright{
        min-height: 200px;
        padding-top: 25px;
        padding-bottom: 8px;
    }

    #copyright h2 {
        font-weight: 400;
        font-size: 1.8rem;
    }
    
    #copyright h4 {
        font-weight: 400;
        font-size: 0.8rem;
    }
    
    #copyright .copyright-bottom {
        margin-bottom: 25px;
    }
    
    #copyright .item {
        height: 50px;
        width: 50px;
        filter: grayscale(100%);
    }
    
    #copyright p {
        font-size: 0.8rem;
    }
} 

